--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -3,6 +3,7 @@
   background-color: white;
   border-radius: 6px;
   margin: 0 auto 20px;
+  padding: 20px 0px 0px;
 }
 .title {
   text-align: center;
@@ -12,15 +13,18 @@
 .stat-list {
   list-style: none;
   display: flex;
-  /* justify-content: space-evenly; */
+  justify-content: space-evenly;
 }
 .item {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 70px;
   text-align: center;
 }
 .label {
   display: block;
   margin-bottom: 10px;
+  font-family: sans-serif;
+}
+.percentage {
   font-family: sans-serif;
 }
