--- a/src/components/friendList/FriendList.module.css
+++ b/src/components/friendList/FriendList.module.css
@@ -1,15 +1,12 @@
 .friend-list {
   width: 500px;
-  margin: 0 auto 20px;
+  margin: 20px auto;
   border-radius: 6px;
 }
 .item {
   display: flex;
   justify-content: space-around;
   height: 100px;
-  -webkit-box-shadow: 3px 6px 13px 2px rgba(183, 189, 189, 1);
-  -moz-box-shadow: 3px 6px 13px 2px rgba(183, 189, 189, 1);
-  box-shadow: 3px 6px 13px 2px rgba(183, 189, 189, 1);
   margin-bottom: 20px;
   border-radius: 6px;
   background-color: white;
